cmake_minimum_required(VERSION 3.20)
project(Problem_Solving)

set(CMAKE_CXX_STANDARD 14)

add_executable(Problem_Solving "boj/Good Bye, BOJ 2021! /A.cpp" main.cpp boj/1043.cpp codeforce/virtual_620/A.cpp codeforce/virtual_620/B.cpp codeforce/virtual_620/C.cpp boj/2846.cpp boj/10813.cpp boj/10811.cpp boj/1547.cpp boj/1673.cpp boj/20528.cpp "codeforce/#764(div.3)/B.cpp" "codeforce/#764(div.3)/C.cpp" "codeforce/#764(div.3)/D.cpp" boj/2251.cpp codeforce/virtual_622/A.cpp "codeforce/#770(div.2)/A.cpp" "codeforce/#770(div.2)/B.cpp" "codeforce/#770(div.2)/C.cpp" "boj/1786.cpp" "codeforce/global_round_19/A.cpp" "codeforce/global_round_19/B.cpp" "codeforce/global_round_19/C.cpp"  "boj/5052.cpp" "codeforce/Educational #124(div.2)/C.cpp" "codeforce/Educational #124(div.2)/A.cpp" "codeforce/Educational #124(div.2)/B.cpp" boj/15655.cpp boj/9184.cpp boj/11066.cpp boj/2293.cpp "leetcode/Longest Palindromic Substring .cpp")
